# ethernet_over_serial

./: .gitmodules  CMakeLists.txt  main.c  network.plantuml  readme.txt
inc/port/: lwipopts.h
inc/usecase/server/: tcp.h  udp.h
port/: lwipopts.h
port/arch/: cc.h  sys_arch.c  sys_arch.h
src/: main.c  main_dual_interface.c  tcp_server.c  udp_server.c
